Set Automatic-Module-Name